# customer-manager

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release-publish.yml
src/: App.module.css  App.tsx  appConfig.ts  datetime.ts  index.css  index.tsx  model.ts  preferences.tsx  translation.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_customer_data.sql  0002_appointments.sql  0003_preferences.sql
src-tauri/src/: error.rs  lib.rs  main.rs  model.rs
src-tauri/src/state/: appointment.rs  customer.rs  employee.rs  mod.rs  preference.rs
src/components/: Button.module.css  Button.tsx  DateInput.module.css  DateInput.tsx  Dialog.module.css  Dialog.tsx  InputGroup.module.css  InputGroup.tsx  LoadingSpinner.module.css  LoadingSpinner.tsx  MessageBox.module.css  MessageBox.tsx  SelectBox.module.css  SelectBox.tsx  SimpleInput.module.css  SimpleInput.tsx  SplitView.module.css  SplitView.tsx  TextInput.module.css  TextInput.tsx  ToolBar.module.css  ToolBar.tsx
src/customer/: CustomerAppointmentDetails.module.css  CustomerAppointmentDetails.tsx  CustomerAppointmentEditDialog.tsx  CustomerAppointmentList.module.css  CustomerAppointmentList.tsx  CustomerDetails.module.css  CustomerDetails.tsx  CustomerDetailsDialog.tsx  CustomerList.module.css  CustomerList.tsx
src/employee/: EmployeeDetails.module.css  EmployeeDetails.tsx  EmployeeEditDialog.tsx  EmployeeList.module.css  EmployeeList.tsx
src/hooks/: form.tsx  (+1 more)
(+20 files in other folders)
