[package]
name = "customer-manager"
version = "0.1.0"
description = "A simple manager for customer data"
authors = ["Lars Westermann <rust@lars-westermann.de>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "customer_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "2.1", features = ["full"] }

tokio = { version = "1.49", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
env_logger = "0.11"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
